# ink

./: CMakeLists.txt  CMakePresets.json  README.md
include/ast/: ast.hpp  block_statement.hpp  boolean_literal.hpp  call_expression.hpp  expression_statement.hpp  function_literal.hpp  identifier.hpp  if_expression.hpp  infix_expression.hpp  integer_literal.hpp  let_statement.hpp  prefix_expression.hpp  program.hpp  return_statement.hpp  string_literal.hpp
include/ast/identifier/: identifier.hpp
include/ast/let_statement/: let_statement.hpp
include/ast/program/: program.hpp
include/evaluator/: evaluator.hpp
include/lexer/: lexer.hpp
include/object/: boolean.hpp  environment.hpp  error.hpp  function.hpp  integer.hpp  null.hpp  object.hpp  return_value.hpp  string.hpp
include/parser/: parser.hpp
include/repl/: repl.hpp
include/tests/ast/: test.hpp
include/tests/lexer/: test.hpp
include/tests/parser/: test.hpp
include/token/: token.hpp
include/types/: types.hpp
include/utils/: utils.hpp
src/: main.cpp
src/ast/: block_statement.cpp  boolean_literal.cpp  call_expression.cpp  expression_statement.cpp  function_literal.cpp  identifier.cpp  if_expression.cpp  infix_expression.cpp  integer_literal.cpp  let_statement.cpp  prefix_expression.cpp  program.cpp  return_statement.cpp  string_literal.cpp
src/evaluator/: evaluator.cpp  expressions.cpp  functions.cpp  internal.hpp  statements.cpp  utils.cpp
src/lexer/: lexer.cpp  lexer_utils.cpp
src/object/: boolean.cpp  environment.cpp  error.cpp  function.cpp  integer.cpp  null.cpp  return_value.cpp  string.cpp
src/parser/: constructor.cpp  infix_functions.cpp  parse_block_statement.cpp  parse_call_arguments.cpp  parse_expression_statement.cpp  parse_function_literal.cpp  parse_if_expression.cpp  parse_let_statement.cpp  parse_return_statement.cpp  parser.cpp  parser_utils.cpp  prefix_functions.cpp
src/repl/: repl.cpp
src/token/: token.cpp
src/utils/: utils.cpp
tests/: main.cpp
tests/ast/: test_expression_statement.cpp  test_identifier.cpp  test_let_statement.cpp  test_program.cpp  test_return_statement.cpp  test_runner.cpp
tests/evaluator/: test_boolean_evaluation.cpp  test_error_handling.cpp  test_functions.cpp  test_if_else_evaluation.cpp  test_if_else_integer_evaluation.cpp  test_integer_evaluation.cpp  test_let_statements.cpp  test_string_evaluation.cpp
tests/lexer/: basic_tokens.cpp  code_complex.cpp  full_code.cpp  string_test.cpp
tests/parser/: test_boolean_expressions.cpp  test_call_expressions.cpp  test_function_literal.cpp  test_grouped_expressions.cpp  test_ident_expressions.cpp  test_if_expressions.cpp  test_infix_expressions.cpp  test_integer_expressions.cpp  test_let_statement_noexpr.cpp  test_operator_precedence.cpp  test_prefix_expressions.cpp  test_return_statement.cpp  test_string_literal.cpp  test_utils.cpp
